archivos de pangenoma actualizados y mic de nuevas categorias y fenotipos, flata actualizar informacion

--- a/2_Preprocessing_CAMDApublicdata.qmd
+++ b/2_Preprocessing_CAMDApublicdata.qmd
@@ -9,11 +9,22 @@
 >     -   [training set](https://github.com/ccm-bioinfo/CAMDA2025_AntibioticResistance/blob/main/rawdata/TrainAndTest_dataset/training_dataset.csv): CAMDA training set (`training_metadata_db`).
 >     -   [NCBI data](https://github.com/ccm-bioinfo/CAMDA2025_AntibioticResistance/blob/main/metadata/sra-metadata.csv): Metadata from NCBI (June 10, 2025) (`sra_metadata_db`)
 >     -   [Antibiogramas](https://zenodo.org/records/14876710): Metadata from NCBI, ENA and BV-BRC. (February 16, 2025) (`antibiograms_db`)
-> -   Output files:
->     -   `testing_metadata_cleaned.tsv` : File containing only the SRA data *not* shared with the training set. Located in `rawdata/TrainAndTest_cleaned`.
->     -   `Training_allstatus_sp_reference_metadata.tsv.gz` : Metadata table describing the content of public datasets (`sra_metadata_db` and `antibiograms_db`) and the training dataset. Includes two additional columns: `status` and `status_reference`. See complete details in **STEP 4**.
->     -   `Test_allstatus_sp_reference_metadata.tsv.gz` : Metadata table describing the content of public datasets (`sra_metadata_db` and `antibiograms_db`) and the testing dataset. Includes two additional columns: `status` and `status_reference`. See complete details in **STEP 4**.
->     -   `training_metadata_cleaned.tsv` : Clean dataset with no missing data and no misclassified species. Species were also reassigned when necessary. See full explanation in **STEP 5**
+> -   **Output files:**
+>     -   [`testing_metadata_cleaned.tsv`](https://github.com/EveliaCoss/CAMDA2025_metadatos/blob/main/rawdata/TrainAndTest_cleaned/testing_metadata_cleaned.tsv) : File containing only the SRA data *not* shared with the training set. Located in `rawdata/TrainAndTest_cleaned`.
+>     -   [`training_metadata_cleaned.tsv`](https://github.com/EveliaCoss/CAMDA2025_metadatos/blob/main/rawdata/TrainAndTest_cleaned/training_metadata_cleaned.tsv) : Clean dataset with no missing data and no misclassified species. Species were also reassigned when necessary. See full explanation in **STEP 5.**
+>     -   [`Training_allstatus_sp_reference_metadata.tsv.gz`](https://github.com/EveliaCoss/CAMDA2025_metadatos/blob/main/rawdata/TrainAndTest_cleaned/Training_allstatus_sp_reference_metadata.tsv.gz) : Metadata table describing the content of public datasets (`sra_metadata_db` and `antibiograms_db`) and the training dataset. Includes two additional columns: `status` and `status_reference`. See complete details in **STEP 4**.
+>     -   [`Test_allstatus_sp_reference_metadata.tsv.gz`](https://github.com/EveliaCoss/CAMDA2025_metadatos/blob/main/rawdata/TrainAndTest_cleaned/Test_allstatus_sp_reference_metadata.tsv.gz) : Metadata table describing the content of public datasets (`sra_metadata_db` and `antibiograms_db`) and the testing dataset. Includes two additional columns: `status` and `status_reference`. See complete details in **STEP 4**.
+>     -   [`complete_metadata.RData`](https://github.com/EveliaCoss/CAMDA2025_metadatos/blob/main/rawdata/TrainAndTest_cleaned/complete_metadata.RData): This RData file contains a consolidated set of key objects used in workflows for antimicrobial resistance analysis and sequencing metadata. It supports smooth transitions between preprocessing, integration, and analysis stages. See complete details in **STEP 5**.
+>         -   `antibiograms_db`: Antimicrobial susceptibility data for individual isolates, including phenotypic profiles and MIC values.
+>         -   `test_db_cleaned`: Cleaned and preprocessed test dataset, prepared for downstream validation or analysis.
+>         -   `training_db_cleaned`: Curated training dataset used for model development or exploratory analysis.
+>         -   `sra_metadata_db`: Detailed metadata from the Sequence Read Archive (SRA), including project identifiers, sample information, and sequencing attributes.
+>         -   `test_completeInfo_db`: Enriched version of the test dataset, integrating additional metadata such as phenotype, species, sample origin, and resource status information. Dataset related to `Test_allstatus_sp_reference_metadata.tsv.gz.`
+>         -   `training_cleanedInfo_db`: Harmonized training dataset with integrated metadata, including phenotype, species, and resource status details, ready for modeling or comparative analysis. Dataset related to `Training_allstatus_sp_reference_metadata.tsv.gz.`
+>     -   [`training_diff_phenotype_db.tsv`](https://github.com/EveliaCoss/CAMDA2025_metadatos/blob/main/rawdata/diff_phenotype/training_diff_phenotype_db.tsv): : Data on accessions that have more than one phenotype associated with the MIC value. See complete details in **Section 3: Diverse phenotypes**.
+>     -   [`training_diff_phenotype_summary.tsv`](https://github.com/EveliaCoss/CAMDA2025_metadatos/blob/main/rawdata/diff_phenotype/training_diff_phenotype_summary.tsv): Summary of the number of phenotypes assigned per species and accession. See complete details in **Section 3: Diverse phenotypes**.
+> -   **Function:**
+>     -   [`compare_sp()`](https://github.com/EveliaCoss/CAMDA2025_metadatos/blob/main/functions/compare_sp_function.R): Performs a comparison and integration of species-level metadata across different sources (e.g., `training_metadata_db`, `sra_metadata_db`, and `antibiograms_db`). It ensures consistency and alignment of sample annotations by merging and validating key fields such as species identity, phenotypic labels, and associated metadata. The output is a harmonized `tibble` suitable for downstream analyses or quality control. See complete details in **STEP 4**.
 
 ## Load packages
 
